# fem_framework

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/poisson1d/: CMakeLists.txt  main.cpp
include/fem/: fem.hpp
include/fem/analysis/: error_estimate.hpp  jump_indicator.hpp  l2_error.hpp  refine.hpp
include/fem/assembly/: assembler.hpp  sparsity.hpp
include/fem/boundary/: boundary_condition.hpp  dirichlet_bc.hpp  neumann_bc.hpp
include/fem/core/: mesh.hpp  mesh_impl.hpp  mesh_utils.hpp
include/fem/discretization/element/: finite_element.hpp  lagrange_p1_1d.hpp  lagrange_p1_2d.hpp  lagrange_p2_1d.hpp
include/fem/discretization/quadrature/: gauss_legendre_1d.hpp  quadrature_rule.hpp  triangle_quadrature.hpp
include/fem/io/: meta.hpp  output.hpp
include/fem/linalg/: checks.hpp  matrix.hpp  solver.hpp  sparse_matrix.hpp  vector.hpp
include/fem/problems/: poisson_1d.hpp  problem.hpp
include/fem/solve/: driver.hpp
scripts/: plot_latest.gp  plot_latest.sh  run_and_plot.sh
src/: CMakeLists.txt
src/analysis/: jump_indicator.cpp  refine.cpp
src/assembly/: assembler.cpp  sparsity.cpp
src/boundary/: dirichlet_bc.cpp  neumann_bc.cpp
src/core/: mesh.cpp  mesh_utils.cpp
src/discretization/element/: lagrange_p1_1d.cpp  lagrange_p1_2d.cpp  lagrange_p2_1d.cpp
src/discretization/quadrature/: gauss_legendre_1d.cpp  triangle_quadrature.cpp
src/io/: output.cpp
src/linalg/: matrix.cpp  solver.cpp  sparse_matrix.cpp  vector.cpp
src/problems/: poisson_1d.cpp
src/solve/: driver.cpp
tests/: CMakeLists.txt  adaptive_refinement_test.cpp  convergence_test.cpp  l2_error_test.cpp  linear_dirichlet_test.cpp  mesh2d_test.cpp  mesh_test.cpp  neumann_bc_test.cpp  output_test.cpp  p1_2d_test.cpp  p2_convergence_test.cpp  p2_element_test.cpp  poisson2d_convergence_test.cpp  poisson2d_test.cpp  reaction_test.cpp  sparse_matrix_test.cpp  sparsity_test.cpp  test_assert.hpp  test_helpers.hpp  test_mesh.cpp  test_poisson_convergence.cpp  test_poisson_l2_error.cpp  test_poisson_linear_dirichlet.cpp  triangle_quadrature_test.cpp
